k8s-manifests/gitea/runner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-runner
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-runner
  template:
    metadata:
      labels:
        app: gitea-runner
    spec:
      nodeSelector:
        kubernetes.io/hostname: babel-it
      serviceAccountName: gitea-runner
      containers:
        - name: runner
          image: gitea/act_runner:v0.6.0
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1536Mi"
              cpu: "1000m"
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
